<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PeluqueriaAndroid</string>
    <string name="nav_button_home">Home</string>
    <string name="nav_button_profile">Profile</string>
    <string name="nav_button_booking">Booking</string>
    <string name="nav_button_agenda">Agenda</string>
    <string name="nav_button_settings">Settings</string>
    <string name="main_view_label_username">Username</string>
    <string name="main_view_button_make_appointment">Make a Appointment</string>
    <string name="main_view_button_view_appointments">View Appointments</string>
    <string name="user_label_username">Username:</string>
    <string name="user_label_password">Password:</string>
    <string name="user_label_name">Name:</string>
    <string name="user_label_surname">Surname:</string>
    <string name="user_label_gender">Gender:</string>
    <string name="user_label_telephone">Telephone:</string>
    <string name="user_label_email">E-mail:</string>
    <string name="view_appoinments_modify">Modify</string>
    <string name="view_appoinment_delete">Cancel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender</string>
    <string name="telephone">Telephone</string>
    <string name="email">E-mail</string>
    <string name="register">Register</string>
    <string name="change_language">Change Language:</string>
</resources>