<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paledarkblue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userProfileTextNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/user_label_name"
            android:textColor="@color/paleorange"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nameUserPlain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/name"
            android:textColor="@color/paleorange" />

        <TextView
            android:id="@+id/userProfileTextSurnameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/user_label_surname"
            android:textColor="@color/paleorange"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/surnameUserPain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/surname"
            android:textColor="@color/paleorange" />

        <TextView
            android:id="@+id/userProfileTextGenderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/user_label_gender"
            android:textColor="@color/paleorange"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/genderUserPain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/gender"
            android:textColor="@color/paleorange" />

        <TextView
            android:id="@+id/userProfileTextTelephoneLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/user_label_telephone"
            android:textColor="@color/paleorange"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/telephoneUserPain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/telephone"
            android:textColor="@color/paleorange" />

        <TextView
            android:id="@+id/userProfileTextEmailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/user_label_email"
            android:textColor="@color/paleorange"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailUserPain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/email"
            android:textColor="@color/paleorange"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/register"
            android:textSize="20sp" />

    </LinearLayout>

</FrameLayout>